--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,36 @@
     src: url(./assets/THUNDER/Fonts/Web-PS/Thunder-BoldLC.woff2) format("woff2");
   }
 }
+
+@layer components {
+  .double-border {
+    position: relative;
+    border: 1px solid #fafaff;
+  }
+  .double-border:before {
+    background: none;
+    border: 4px solid #050505;
+    border-radius: 50px;
+    content: "";
+    display: block;
+    position: absolute;
+    inset: -4px;
+    z-index: -1;
+    pointer-events: none;
+  }
+  .double-border2 {
+    position: relative;
+    border: 2px solid #050505;
+  }
+  .double-border2:before {
+    background: none;
+    border: 8px solid #87ff65;
+    border-radius: 100px;
+    content: "";
+    display: block;
+    position: absolute;
+    inset: -10px;
+    z-index: 1;
+    pointer-events: none;
+  }
+}
