--- a/src/index.css
+++ b/src/index.css
@@ -80,6 +80,7 @@
   .video-text {
     background: url(fire-gif.gif);
     background-size: cover;
+    fill: transparent;
     -webkit-text-fill-color: transparent;
     background-clip: text;
     -webkit-background-clip: text;
