--- a/src/index.css
+++ b/src/index.css
@@ -78,7 +78,7 @@
   }
 
   .video-text {
-    background: url("./fire.gif");
+    background: url("https://i.pinimg.com/originals/35/d9/58/35d958e9bf697614be4e826504740ee2.gif");
     background-size: cover;
     fill: transparent;
     -webkit-text-fill-color: transparent;
